Bug fixes, alignment changes on summoner page

--- a/css/main.css
+++ b/css/main.css
@@ -231,6 +231,7 @@ Profile Page
     background-color: #ffeff1;
     border-bottom-right-radius: 11px;
     border-top-right-radius: 11px;
+
 }
 .content>.matchContent>.Champ
 {
@@ -243,6 +244,14 @@ Profile Page
     width: 100px;
     height: 150px;
     position: relative;
+
+}
+.deadspacebottom
+{
+    width: 100%;
+    height: 20px;
+    position: relative;
+    margin: 20px auto;
 
 }
 /*
